--- a/index.html
+++ b/index.html
@@ -5,11 +5,12 @@
     <meta charset="utf-8" />
 
     <title>Fun Bus Travel Agency - Solution</title>
-
+    <meta name="viewport" content="width=device-width, intial-scale=1.0">
     <link
       href="https://fonts.googleapis.com/css?family=Indie+Flower|Roboto"
       rel="stylesheet"
     />
+    
     <link href="css/index.css" rel="stylesheet" />
 
     <!--[if lt IE 9]>
